corrected style sheets path

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,16 @@
-h1 {
-  color: #00a9a0
+/* h1 {
+  color: #00a9a0;
+} */
+
+.container {
+  background-color: aliceblue
+}
+
+.display-4 {
+  font-family: 'Shadows Into Light', cursive;
+  color: blueviolet
+}
+
+.jumbotron {
+  background-color: #c7e7e6
 }
