--- a/assets/style.css
+++ b/assets/style.css
@@ -3,14 +3,19 @@
 } */
 
 .container {
-  background-color: aliceblue
+  background-color: aliceblue;
 }
 
 .display-4 {
   font-family: 'Shadows Into Light', cursive;
-  color: blueviolet
+  color: blueviolet;
 }
 
 .jumbotron {
-  background-color: #c7e7e6
+  background-color: #c7e7e6;
+}
+
+.content-container {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 12px;
 }
