--- a/assets/style.css
+++ b/assets/style.css
@@ -18,4 +18,36 @@ h1 {
 .content-container {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 12px;
+  background-color: #c7e7e6;
+}
+
+.row {
+  background-color: #c7e7e6;
+}
+
+/* #jam {
+  float: left;
+  align-content: center;
+  padding: 20px;
+  margin: 20px;
+}
+
+#jam {
+  float: right;
+  align-content: center;
+  padding: 20px;
+  margin: 20px;
+}
+
+.col-4 {
+  padding: 10px;
+  margin: 10px;
+}
+
+.col-8 {
+  padding: 10px;
+  margin: 10px; */
+/* } */
+#math {
+  color: palevioletred;
 }
