--- a/assets/style.css
+++ b/assets/style.css
@@ -12,18 +12,18 @@ h1 {
 }
 
 .jumbotron {
-  background-color: #c7e7e6;
+  background-color: #61aca9;
 }
 
 .content-container {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 12px;
-  background-color: #c7e7e6;
 }
 
-.row {
-  background-color: #c7e7e6;
+/* .container-fluid {
+  background-color: #95b3b2 */
 }
+
 
 /* #jam {
   float: left;
